--- a/style/style.css
+++ b/style/style.css
@@ -126,32 +126,33 @@ body {
 }
 
 .button:hover {
-    background-color: var(--green-color);
     border: 1px solid var(--green-color);
-    color: var(--black-color);
+    color: var(--green-color);
 }
 
 .button-point {
     color: var(--green-color);
     font-size: 12px;
     padding-right: 7px;
+    transition: 250ms;
     z-index: 1;
 }
 
-.button:hover > .button-point {
+.button:hover>.button-point {
     color: var(--black-color)
 }
 
-.button:hover + .button-line {
-    border-bottom:1px solid var(--black-color);
+.button:hover+.button-line {
+    border-bottom: 2px solid var(--black-color);
 }
 
 .button-line {
-    border-bottom:1px solid var(--green-color);
+    border-bottom: 1px solid var(--green-color);
     width: 50px;
     position: absolute;
     margin-top: 122px;
     margin-right: 180px;
+    transition: 250ms;
     z-index: 1;
 }
 
