--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 :root {
     --green-color: #06f9b7;
     --grey-color: #f8fafa;
@@ -8,6 +10,10 @@
 
 body {
     font-family: var(--font);
+}
+
+.background-grey {
+    background-color: var(--grey-color);
 }
 
 /* margin and padding */
@@ -86,22 +92,17 @@ body {
     z-index: 1;
 }
 
-/* header UX.UI block */
-
-.border-left {
-    border-left: 3px solid var(--green-color);
+.border-right {
+    border-right: 3px solid var(--green-color);
     height: 200px;
     z-index: 1;
 }
 
-.ux-ui-black-dot {
-    color: var(--black-color);
-    font-size: 100px;
+.services-icons {
+    font-size: 35px;
+    transition: 250ms;
 }
 
-.ux-ui-white-title {
-    color: var(--white-color);
-    font-size: 100px;
-    font-weight: bold;
-    z-index: 1;
+.services-icons:hover {
+    color: var(--green-color);
 }
