--- a/style/style.css
+++ b/style/style.css
@@ -14,12 +14,25 @@ body {
 
 .background-grey {
     background-color: var(--grey-color);
+    height: 820px;
 }
 
 /* margin and padding */
 
 .margin-right-350px {
     margin-right: 350px;
+}
+
+.margin-right-min-50px {
+    margin-left: -50px;
+}
+
+.margin-top-40px {
+    margin-top: 40px;
+}
+
+.margin-top-60px {
+    margin-top: 60px;
 }
 
 .margin-top-100px {
@@ -34,10 +47,22 @@ body {
     padding-top: 100px;
 }
 
+.margin-bottom-15px {
+    margin-bottom: 15px;
+}
+
+.margin-bottom-25px {
+    margin-bottom: 25px;
+}
+
 /* flex css */
 
 .flex {
     display: flex;
+}
+
+.flex-direction-column {
+    flex-direction: column;
 }
 
 .justify-center {
@@ -48,47 +73,70 @@ body {
     justify-content: end;
 }
 
+.justify-evenly {
+    justify-content: space-evenly;
+}
+
+.services-title {
+    color: var(--green-color);
+    font-size: 55px;
+    font-weight: bold;
+}
+
+.services-text-500 {
+    font-weight: 500;
+}
+
+.services-title-black {
+    color: var(--black-color);
+    font-size: 55px;
+    font-weight: bold;
+}
+
 /* button desing */
 
-.button {
-    border: 1px solid var(--white-color);
+.second-button {
+    border: 2px solid var(--black-color);
     border-radius: 3px;
     text-decoration: none;
-    color: white;
+    color: var(--black-color);
     font-size: 15px;
     padding: 10px 50px 10px 20px;
     font-family: var(--font);
     transition: 250ms;
+    font-weight: bold;
     z-index: 1;
 }
 
-.button:hover {
-    background-color: var(--green-color);
-    border: 1px solid var(--green-color);
-    color: var(--black-color);
+.second-button:hover {
+    border: 2px solid var(--green-color);
+    color: var(--green-color);
 }
 
 .button-point {
     color: var(--green-color);
     font-size: 12px;
     padding-right: 7px;
+    transition: 250ms;
     z-index: 1;
+    font-weight: bold;
 }
 
-.button:hover>.button-point {
+.second-button:hover>.button-point {
     color: var(--black-color)
 }
 
-.button:hover+.button-line {
+.second-button:hover+.second-button-line {
     border-bottom: 2px solid var(--black-color);
 }
 
-.button-line {
-    border-bottom: 1px solid var(--green-color);
+.second-button-line {
+    border-bottom: 2px solid var(--green-color);
     width: 50px;
     position: absolute;
-    margin-top: 122px;
-    margin-right: 180px;
+    margin-top: -12px;
+    margin-left: 150px;
+    transition: 250ms;
     z-index: 1;
 }
 
@@ -96,13 +144,29 @@ body {
     border-right: 3px solid var(--green-color);
     height: 200px;
     z-index: 1;
+    margin-top: -70px;
+    margin-right: -60px;
+}
+
+.border-left {
+    border-left: 3px solid var(--green-color);
+    height: 200px;
+    z-index: 1;
+    margin-top: 40px;
+    margin-left: -50px;
 }
 
 .services-icons {
     font-size: 35px;
     transition: 250ms;
+    margin-bottom: 50px;
+}
+
+.services-subtitle {
+    font-size: 40px;
+    font-weight: bold;
 }
 
 .services-icons:hover {
-    color: var(--green-color);
+    color: #06f9b7;
 }
