--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,10 @@ body {
     color: var(--white-color);
 }
 
+.white-nav-link:hover {
+    color: var(--white-color);
+}
+
 .nav-item {
     margin-right: 50px;
 }
