--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 :root {
     --green-color: #06f9b7;
     --grey-color: #f8fafa;
@@ -6,21 +8,21 @@
     --black-color: black;
 }
 
-
 body {
     font-family: var(--font);
 }
 
-/* header background */
+/* header section */
 
+/* header background */
 .header-background {
     background-image: url(/img/header-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 676px;
-
 }
 
+/* black and green overlay */
 .background-black {
     position: absolute;
     background-color: var(--black-color);
@@ -37,11 +39,12 @@ body {
     width: 51%;
 }
 
+
+/* navigatie en logo */
+
 .header-icon {
     color: var(--green-color);
 }
-
-/* navigatie en logo */
 
 .logo-text {
     color: var(--white-color);
@@ -71,6 +74,18 @@ body {
     margin-right: 350px;
 }
 
+.margin-right-min-50px {
+    margin-left: -50px;
+}
+
+.margin-top-40px {
+    margin-top: 40px;
+}
+
+.margin-top-60px {
+    margin-top: 60px;
+}
+
 .margin-top-100px {
     margin-top: 100px;
 }
@@ -83,10 +98,37 @@ body {
     padding-top: 100px;
 }
 
+.margin-bottom-15px {
+    margin-bottom: 15px;
+}
+
+.margin-bottom-25px {
+    margin-bottom: 25px;
+}
+
+.margin-bottom-60px{
+    margin-bottom: 60px;
+}
+
+.padding-left-50px{
+    padding-left: 50px;
+}
+
+.padding-right-50px{
+    padding-right: 50px;
+}
+
+.padding-left-20px{
+     padding-left: 20px;
+}
 /* flex css */
 
 .flex {
     display: flex;
+}
+
+.flex-direction-column {
+    flex-direction: column;
 }
 
 .justify-center {
@@ -95,6 +137,10 @@ body {
 
 .justify-end {
     justify-content: end;
+}
+
+.justify-evenly {
+    justify-content: space-evenly;
 }
 
 /* header title */
@@ -112,7 +158,7 @@ body {
     margin-left: 50px;
 }
 
-/* button desing */
+/* first button desing */
 
 .button {
     border: 1px solid var(--white-color);
@@ -148,7 +194,7 @@ body {
 }
 
 .button-line {
-    border-bottom: 1px solid var(--green-color);
+    border-bottom: 2px solid var(--green-color);
     width: 50px;
     position: absolute;
     margin-top: 122px;
@@ -157,9 +203,56 @@ body {
     z-index: 1;
 }
 
+/* second button desing */
+
+.second-button {
+    border: 2px solid var(--black-color);
+    border-radius: 3px;
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 15px;
+    padding: 10px 50px 10px 20px;
+    font-family: var(--font);
+    transition: 250ms;
+    font-weight: bold;
+    z-index: 1;
+}
+
+.second-button:hover {
+    border: 2px solid var(--green-color);
+    color: var(--green-color);
+}
+
+.second-button-point {
+    color: var(--green-color);
+    font-size: 12px;
+    padding-right: 7px;
+    transition: 250ms;
+    z-index: 1;
+    font-weight: bold;
+}
+
+.second-button:hover>.second-button-point {
+    color: var(--black-color)
+}
+
+.second-button:hover+.second-button-line {
+    border-bottom: 2px solid var(--black-color);
+}
+
+.second-button-line {
+    border-bottom: 2px solid var(--green-color);
+    width: 50px;
+    position: absolute;
+    margin-top: -12px;
+    margin-left: 150px;
+    transition: 250ms;
+    z-index: 1;
+}
+
 /* header UX.UI block */
 
-.border-left {
+.header-border-left {
     border-left: 3px solid var(--green-color);
     height: 200px;
     z-index: 1;
@@ -175,66 +268,45 @@ body {
     font-size: 100px;
     font-weight: bold;
     z-index: 1;
-
-
 }
 
 /* about-us */
 
-
-.green-text{
-    color:var(--green-color);
+.green-text {
+    color: var(--green-color);
 }
-.bold{
+
+.bold {
     font-weight: bold;
 }
 
-.padding-right-left-100px{
-    padding: 0 100px;
+.About-us {
+    height: 720px;
 }
-.About-us{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-.About-us-heading{
-    margin-bottom: 80px;
-    padding: 0px 100px;
-}
-.About-us-heading h2, .portfolio-heading h2{
-    font-family: var(--font);
-    font-size: 50px;
+
+.About-us-heading h2 , .portfolio-heading h2{
+    font-size: 55px;
     font-weight: bolder;
-    margin-bottom: 20px;
 }
-.About-us-heading p, .portfolio-heading p{
-    font-family: var(--font);
-    font-size: 15px;
-}
-.About-us-content{
-    padding: 0 100px;
-}
-.About-us-content-box {
-     width: 350px;
-     padding: 0 20px;
-}
-.about-icon-title h3{
+
+.about-icon-title h3 {
     font-style: italic;
     font-size: 40px;
-    font-family: var(--font);
     font-weight: bolder;
     margin-bottom: 10px;
 }
-.icon-overlay-container{
+
+.icon-overlay-container {
     position: relative;
     display: inline-block;
 }
-.icon-overlay-container i{
+
+.icon-overlay-container i {
     font-size: 70px;
     z-index: 99;
-    margin-bottom: 10px;   
+    margin-bottom: 10px;
 }
+
 .icon-overlay {
     content: "";
     position: absolute;
@@ -243,41 +315,121 @@ body {
     width: 210px;
     height: 10px;
     background-color: var(--green-color);
-    display: block; 
+    display: block;
     z-index: -1;
 }
-.about-icon-text{
-    font-size: 15px;
+
+.about-icon-text {
+ 
     font-weight: 600;
 
 }
 
+/* Our Service */
+
+.background-grey {
+    background-color: var(--grey-color);
+    height: 820px;
+}
+
+.services-title {
+    color: var(--green-color);
+    font-size: 55px;
+    font-weight: bold;
+}
+
+.services-text-500 {
+    font-weight: 500;
+}
+
+.services-title-black {
+    color: var(--black-color);
+    font-size: 55px;
+    font-weight: bold;
+}
+
+.services-icons {
+    font-size: 35px;
+    transition: 250ms;
+    margin-bottom: 10px;
+}
+
+.services-subtitle {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.services-icons:hover {
+    color: #06f9b7;
+}
+
+
+/* border left and right  */
+
+.border-right {
+    border-right: 3px solid var(--green-color);
+    height: 200px;
+    margin-top: -90px;
+    z-index: 1;
+}
+
+.border-left {
+    border-left: 3px solid var(--green-color);
+    height: 200px;
+    z-index: 1;
+    margin-top: 110px;
+}
 
 /* portfolio */
 
-.margin-top-40px{
-    margin-top: 40px;
-}
-
-.portfolio-heading{
-    padding: 0 100px;
-
-}
 .portfolio-menu li{
     display: inline-block;
     padding-right: 50px;
     font-weight: bolder;
 }
-
 .img-fluid {
     height: 350px;
     width: auto;
     object-fit: cover;
 }
-
 .col {
     display: flex;
     flex-direction: column;
+    position: relative;
+}
+
+.overlay-img{
+   position: absolute;
+   top:0;
+   left:0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(6,249,183,0.5);
+   z-index:1;
+   opacity: 0;
+   transition: opacity 0.3s ease;
+}
+.col:hover .overlay-img{
+    opacity: 1;
+}
+.overlay-img-text{
+
+    position: absolute;
+    top: 72%;
+    background: var(--green-color);
+    padding: 10px;
+    width: 100%;
+    opacity: 0;
+    height: 100px;
+
+}
+.text-i{
+    position: absolute;
+    top: 80%;
+    transform:translate(50%,-80%)
+}
+.col:hover .overlay-img-text{
+    opacity: 1;
 }
 
 
