--- a/style/style.css
+++ b/style/style.css
@@ -438,11 +438,21 @@ body {
 }
 .text-i{
     position: absolute;
-    top: 80%;
-    transform:translate(50%,-80%)
+    top: 65%;
+    transform:translate(30%,-80%);
+    font-size: 17px;
 }
 .col:hover .overlay-img-text{
     opacity: 1;
+}
+.overlay-img-text i{
+    position: absolute;
+    right: 30px;
+    top:-35px;
+    border: 1px solid white;
+    background: white;
+    border-radius: 50%;
+    padding: 10px;
 }
 
 
