--- a/style/style.css
+++ b/style/style.css
@@ -149,7 +149,8 @@ body {
     margin-right: 150px;
 }
 .padding-left-50px{
-=======
+    padding-left: 50px;
+}
 .margin-bottom-130px {
     margin-bottom: 130px;
 }
