--- a/style/style.css
+++ b/style/style.css
@@ -481,6 +481,7 @@ body {
 
 .About-us {
     height: 720px;
+    position: relative;
 }
 
 .About-us-heading h2 , .portfolio-heading h2{
@@ -520,6 +521,14 @@ body {
 
 .about-icon-text {
     font-weight: 600;
+}
+
+.who{
+    position: absolute;
+    top: 20%;
+    right: 5px;
+    transform: rotate(270deg);
+
 }
 
 /* Our Service */
@@ -626,12 +635,12 @@ body {
     width: 100%;
     height: 100%;
     background: var(--green-color);
-    transform: skewY(-10deg);
+    transform: skewY(-5deg);
     z-index: -1;
 }
-.overlay-img-text:before{
+/*.overlay-img-text::before{
     transform: skewY(-10deg);
-}
+}*/
 .text-i{
     position: absolute;
     top: 65%;
