--- a/style/style.css
+++ b/style/style.css
@@ -522,10 +522,10 @@ body {
 
 .about-sideways-text {
     position: absolute;
-    left: 615px;
-    top: 100px;
+    right: 1px;
+    top: 20%; 
     transform: rotate(270deg);
-    padding-right: 10px;
+    
 }
 
 /* Our Service */
