probleem opgelost met de background in services section

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --green-color: #06f9b7;
-    --grey-color: #f8fafa;
+    --grey-color: #f5f5f5;
     --font: "Poppins", sans-serif;
     --white-color: white;
     --black-color: black;
