--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ body {
 
 /* header background */
 .header-background {
-    background-image: url(/img/header-background.jpg);
+    background-image: url(../img/header-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 676px;
