--- a/style/style.css
+++ b/style/style.css
@@ -677,7 +677,7 @@ body {
 /* banner contact */
 
 .contact-banner {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/img/contact.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/contact.jpg);
     height: 500px;
     background-size: cover;
     background-repeat: no-repeat;
